Update index.html lab partner

--- a/Desktop/web-dev-lab/index.html
+++ b/Desktop/web-dev-lab/index.html
@@ -8,6 +8,7 @@ htm<!DOCTYPE html>
 <body>
 <header>
 <h1>Welcome to Chimwemwe Kamanga 2021394859 Website</h1>
+    <h2>Lab partner Ongani C. Zulu 2021391060</h2>
 <nav>
 <a href="#">Home</a> |
 <a href="#">About</a> |
